--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     margin-top: 60px;
     background-color: #33333310;
     height: 100%;
+    font-family: poppins !important;
 }
 .page-heading{
     font-size: 32px;
