--- a/src/components/Advantage.css
+++ b/src/components/Advantage.css
@@ -33,8 +33,8 @@
   text-align: center;
   border-radius: 15px;
   padding: 1rem;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15); /* Added box shadow */
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* optional for hover effect */
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15); 
+  transition: transform 0.3s ease, box-shadow 0.3s ease; 
 }
 
 .adv-left-card:hover {
