--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -66,7 +66,7 @@
 }
 
 .footer-socials a:hover {
-  color: #0d6efd;
+  color: #003366;
 }
 
 /* Center Section */
@@ -87,7 +87,7 @@
 }
 
 .footer-center a:hover {
-  color: #0d6efd;
+  color: #003366;
 }
 
 /* Right Section */
@@ -99,7 +99,7 @@
 }
 
 .contact-btn {
-  background-color: #0d6efd;
+  background-color: #003366;
   color: #fff;
   border: none;
   padding: 0.8rem 1.6rem;
@@ -110,7 +110,7 @@
 }
 
 .contact-btn:hover {
-  background-color: #0056b3;
+  background-color: #003366;
   transform: translateY(-2px);
 }
 
@@ -126,20 +126,20 @@
 @media (max-width: 768px) {
   .footer-container {
     flex-direction: column;
-    text-align: center;
+    text-align: left;
   }
 
   .footer-left,
   .footer-center,
   .footer-right {
-    align-items: center;
+    align-items: left;
   }
 
   .footer-brand {
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   .footer-socials {
-    justify-content: center;
+    justify-content: flex-start;
   }
 }
