--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -168,7 +168,7 @@
     justify-content: center;
     padding: 10px;
     margin: auto; 
-    min-width: fit-content;
+    max-width: fit-content;
     height: auto;
   }
 
