--- a/src/components/Advantage.css
+++ b/src/components/Advantage.css
@@ -95,6 +95,9 @@
 
 /* Mobile Responsive */
 @media (max-width: 768px) {
+  .adv-fluid {
+  padding: 2rem 0;
+}
   .adv-container {
   display: flex;
   flex-direction: column;
@@ -104,7 +107,21 @@
 }
 .adv-left-section{
     width: 95%;
-
+}
+.adv-left-small-box {
+  width: fit-content;
+  max-width: 245px;
+  height: 95px;
+  position: absolute;
+  bottom: -25px; 
+  right: 10%; 
+  left: auto;
+  transform: translateX(50%); 
+  background-color: #003366;
+  color: #fff;
+  padding: 15px;
+  border-radius: 8px;
+  margin-bottom: 0; 
 }
 .adv-right-div {
     margin: auto;
