--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -159,6 +159,8 @@ height: auto !important;
   .responsibilities-title {
     margin-top: 10px;
     font-size: 1rem;
+    margin: auto !important;
+    text-align: center !important;
   }
 
   .responsibilities-list {
