--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -105,18 +105,12 @@ width: 100%;
 
 /* Responsive */
 @media (max-width: 768px) {
-    .slick-slide {
-    min-width: 100% !important;
-  }
   .experience-section {
   padding: 15px 7px;
   margin: auto;
   background-color: #f9fafc;
   text-align: center;
 }
- .slick-track {
-    display: flex !important;
-  }
 .experience-subtitle {
   margin-bottom: 15px;
 }
@@ -124,10 +118,13 @@ width: 100%;
     width: 100% !important;
     padding: 0;
   }
-  .experience-card {
 
-height: auto !important;
-}
+  .experience-card {
+    min-width: 100% !important;
+    height: auto;
+    text-align: center !important;
+    padding: 20px;
+  }
 
   /* Stack logo above company name */
   .experience-header {
@@ -159,8 +156,6 @@ height: auto !important;
   .responsibilities-title {
     margin-top: 10px;
     font-size: 1rem;
-    margin: auto !important;
-    text-align: center !important;
   }
 
   .responsibilities-list {
