--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -28,6 +28,7 @@
   margin: 10px;
   text-align: left;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 100%;
   height: 420px;
   display: flex;
   flex-direction: column;
@@ -106,6 +107,7 @@ width: 100%;
 /* Responsive */
 @media (max-width: 768px) {
   .experience-section {
+    width: 100%;
   padding: 25px 7px;
   margin: auto;
   background-color: #f9fafc;
@@ -120,6 +122,8 @@ width: 100%;
   }
 
    .experience-card {
+    width: 350px;
+    max-width: 100%;
     height: auto;
     text-align: center;
     padding: 20px;
