--- a/src/components/Advantage.css
+++ b/src/components/Advantage.css
@@ -129,7 +129,7 @@
 width: 95%;
 text-align: justify;
 
-background-color: #003366;
+/* background-color: #003366; */
 }
   .adv-boxes-div {
     display: grid;
