--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -28,7 +28,6 @@
   margin: 10px;
   text-align: left;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: 100%;
   height: 420px;
   display: flex;
   flex-direction: column;
@@ -107,8 +106,7 @@ width: 100%;
 /* Responsive */
 @media (max-width: 768px) {
   .experience-section {
-    width: 100%;
-  padding: 25px 7px;
+  padding: 15px 7px;
   margin: auto;
   background-color: #f9fafc;
   text-align: center;
@@ -118,16 +116,14 @@ width: 100%;
 }
   .experience-slider {
     width: 100% !important;
-    padding: 2px;
+    padding: 0;
   }
 
-   .experience-card {
-    width: 350px;
-    max-width: 100%;
+  .experience-card {
+    width: 100% !important;
     height: auto;
-    text-align: center;
+    text-align: center !important;
     padding: 20px;
-    margin: 0 5px; /* gap thoda reduce */
   }
 
   /* Stack logo above company name */
